// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageRow /> when there are images, images are rendered 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <TouchableHighlight
    activeOpacity={0.85}
    delayPressOut={100}
    onPress={[Function]}
    underlayColor="black"
  >
    <Image
      source={
        Object {
          "uri": "foo/bar.png",
        }
      }
      style={
        Object {
          "borderRadius": 10,
          "flex": 0.4,
          "height": 262.5,
          "margin": 10,
          "width": 262.5,
        }
      }
    />
  </TouchableHighlight>
  <TouchableHighlight
    activeOpacity={0.85}
    delayPressOut={100}
    onPress={[Function]}
    underlayColor="black"
  >
    <Image
      source={
        Object {
          "uri": "baz/foo.png",
        }
      }
      style={
        Object {
          "borderRadius": 10,
          "flex": 0.4,
          "height": 262.5,
          "margin": 10,
          "width": 262.5,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`<ImageRow /> when there is no images, empty image buttons are rendered 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <IconButton
    backgroundColor="transparent"
    borderRadius={5}
    color="gray"
    name="add-a-photo"
    onPress={[Function]}
    size={210.00000000000003}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 10,
        "elevation": 1,
        "flex": 0.4,
        "height": 262.5,
        "justifyContent": "center",
        "margin": 14,
        "width": 262.5,
      }
    }
  />
  <IconButton
    backgroundColor="transparent"
    borderRadius={5}
    color="gray"
    name="add-a-photo"
    onPress={[Function]}
    size={210.00000000000003}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 10,
        "elevation": 1,
        "flex": 0.4,
        "height": 262.5,
        "justifyContent": "center",
        "margin": 14,
        "width": 262.5,
      }
    }
  />
</Component>
`;
